--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -124,7 +124,7 @@ jobs:
       - name: Run oslo-shacl-template-generator
         id: run-shacl-template-generator
         run: |
-          npx oslo-shacl-template-generator --input report.jsonld --output ${{ steps.read-config.outputs.name }}-SHACL.ttl 2>&1 | tee shacl-template.log
+          npx oslo-shacl-template-generator --input report.jsonld --outputFormat text/turtle --output ${{ steps.read-config.outputs.name }}-SHACL.ttl --language nl 2>&1 | tee shacl-template.log
           cat shacl-template.log
           cat shacl-template.log >> "$GITHUB_STEP_SUMMARY"
           if grep -i "error" shacl-template.log; then
@@ -136,7 +136,7 @@ jobs:
       - name: Run oslo-jsonld-context-generator
         id: run-jsonld-context-generator
         run: |
-          npx oslo-jsonld-context-generator --input report.jsonld --output ${{ steps.read-config.outputs.name }}.jsonld 2>&1 | tee context.log
+          npx oslo-jsonld-context-generator --input report.jsonld --output ${{ steps.read-config.outputs.name }}.jsonld --language nl 2>&1 | tee context.log
           cat context.log
           cat context.log >> "$GITHUB_STEP_SUMMARY"
           if grep -i "error" context.log; then
