Update status to URI format

--- a/bodemenondergrond-VOC-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-VOC-BodemEnOndergrond-config.json
@@ -2,7 +2,7 @@
   "title": "Vocabularium Bodem en Ondergrond",
   "category": "Vocabularium",
   "usage": "Aanbevolen (vrijwillig)",
-  "status": "kandidaat-standaard",
+  "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/KandidaatStandaard",
   "descriptionFileName": "bodemEnOndergrond-voc.md",
   "responsibleOrganisation": [
     {
@@ -22,9 +22,9 @@
       "name": "Applicatieprofiel Bodem en Ondergrond",
       "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/"
     },
-        {
-      "name":"Github",
-      "resourceReference":"https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
+    {
+      "name": "Github",
+      "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
     }
   ],
   "reports": [
