--- a/bodemenondergrond-VOC-BodemEnOndergrondInterpretaties-config.json
+++ b/bodemenondergrond-VOC-BodemEnOndergrondInterpretaties-config.json
@@ -2,7 +2,7 @@
   "title": "Vocabularium Bodem en Ondergrond Interpretaties",
   "category": "Vocabularium",
   "usage": "Aanbevolen (vrijwillig)",
-  "status": "standaard-in-ontwikkeling",
+  "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
   "descriptionFileName": "bodemenondergrond.md",
   "responsibleOrganisation": [
     {
@@ -18,13 +18,13 @@
     }
   ],
   "documentation": [
-     {
-  "name": "Applicatieprofiel Bodem en Ondergrond Interpretaties",
-  "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/interpretaties/"
-  },
-        {
-      "name":"Github",
-      "resourceReference":"https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
+    {
+      "name": "Applicatieprofiel Bodem en Ondergrond Interpretaties",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/interpretaties/"
+    },
+    {
+      "name": "Github",
+      "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
     }
   ],
   "reports": [
