--- a/bodemenondergrond-VOC-Grondboringen-config.json
+++ b/bodemenondergrond-VOC-Grondboringen-config.json
@@ -2,7 +2,7 @@
   "title": "Vocabularium Grondboringen",
   "category": "Vocabularium",
   "usage": "Aanbevolen (vrijwillig)",
-  "status": "standaard-in-ontwikkeling",
+  "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
   "descriptionFileName": "bodemenondergrondgrondboringen-voc.md",
   "responsibleOrganisation": [
     {
@@ -22,9 +22,9 @@
       "name": "Applicatieprofiel Grondboringen",
       "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/grondboringen/"
     },
-        {
-      "name":"Github",
-      "resourceReference":"https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
+    {
+      "name": "Github",
+      "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
     }
   ],
   "reports": [
