bodemenondergrond-config.json: breng status naar Erkende Standaard
Bodem en Ondergrond werd herkend door het Stuurorgaan als Erkende Standaard, publiceer deze wijziging via de Toolchain.

--- a/bodemenondergrond-config.json
+++ b/bodemenondergrond-config.json
@@ -2,7 +2,7 @@
   "title": "Vocabularia en Applicatieprofielen Bodem en Ondergrond",
   "category": "Vocabularium & applicatieprofielen",
   "usage": "Aanbevolen (vrijwillig)",
-  "status": "kandidaat-standaard",
+  "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/ErkendeStandaard",
   "descriptionFileName": "bodemenondergrond.md",
   "responsibleOrganisation": [
     {
