--- a/bodemenondergrond-AP-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrond-config.json
@@ -1,7 +1,7 @@
 {
   "title": "Applicatieprofiel Bodem en Ondergrond",
   "category": "Applicatieprofiel",
-  "usage": "Aanbevolen (vrijwillig)",
+  "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/KandidaatStandaard",
   "descriptionFileName": "bodemEnOndergrond-ap.md",
   "responsibleOrganisation": [
