--- a/bodemenondergrond-VOC-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-VOC-BodemEnOndergrond-config.json
@@ -1,7 +1,7 @@
 {
   "title": "Vocabularium Bodem en Ondergrond",
   "category": "Vocabularium",
-  "usage": "Aanbevolen (vrijwillig)",
+  "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/KandidaatStandaard",
   "descriptionFileName": "bodemEnOndergrond-voc.md",
   "responsibleOrganisation": [
