Update usage to URI format

--- a/bodemenondergrond-AP-BodemEnOndergrondObservaties-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrondObservaties-config.json
@@ -1,7 +1,7 @@
 {
   "title": "Applicatieprofiel Bodem en Ondergrond Observaties",
   "category": "Applicatieprofielen",
-  "usage": "Aanbevolen (vrijwillig)",
+  "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
   "descriptionFileName": "bodemEnOndergrondObservaties-ap.md",
   "responsibleOrganisation": [
