--- a/bodemenondergrond-VOC-RuimtelijkeBereiken-config.json
+++ b/bodemenondergrond-VOC-RuimtelijkeBereiken-config.json
@@ -1,7 +1,7 @@
 {
   "title": "Vocabularium Ruimtelijke Bereiken",
   "category": "Vocabularium",
-  "usage": "Aanbevolen (vrijwillig)",
+  "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
   "descriptionFileName": "ruimtelijkebereiken-voc.md",
   "responsibleOrganisation": [
