--- a/bodemenondergrond-AP-ObservatiesEnMetingen-config.json
+++ b/bodemenondergrond-AP-ObservatiesEnMetingen-config.json
@@ -1,7 +1,7 @@
 {
   "title": "Applicatieprofiel Observaties en Metingen",
   "category": "Applicatieprofiel",
-  "usage": "Aanbevolen (vrijwillig)",
+  "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
   "descriptionFileName": "observatiesEnMetingen-ap.md",
   "responsibleOrganisation": [
