--- a/bodemenondergrond-AP-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrond-config.json
@@ -1,6 +1,6 @@
 {
   "title": "Applicatieprofiel Bodem en Ondergrond",
-  "category": "Applicatieprofiel",
+  "category": "https://data.vlaanderen.be/id/concept/StandaardType/Applicatieprofiel",
   "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/KandidaatStandaard",
   "descriptionFileName": "bodemEnOndergrond-ap.md",
