--- a/bodemenondergrond-VOC-Grondboringen-config.json
+++ b/bodemenondergrond-VOC-Grondboringen-config.json
@@ -1,6 +1,6 @@
 {
   "title": "Vocabularium Grondboringen",
-  "category": "Vocabularium",
+  "category": "https://data.vlaanderen.be/id/concept/StandaardType/Vocabularium",
   "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
   "descriptionFileName": "bodemenondergrondgrondboringen-voc.md",
