Update category to URI format

--- a/bodemenondergrond-VOC-ObservatiesEnMetingen-config.json
+++ b/bodemenondergrond-VOC-ObservatiesEnMetingen-config.json
@@ -1,6 +1,6 @@
 {
   "title": "Vocabularium Observaties en Metingen",
-  "category": "Vocabularium",
+  "category": "https://data.vlaanderen.be/id/concept/StandaardType/Vocabularium",
   "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
   "descriptionFileName": "observatiesEnMetingen-voc.md",
