--- a/bodemenondergrond-VOC-Bodem-config.json
+++ b/bodemenondergrond-VOC-Bodem-config.json
@@ -164,5 +164,6 @@
   "dateOfAcknowledgementBySteeringCommittee": "TBD",
   "repository": "OSLOthema-bodemEnOndergrond",
   "datePublicReviewStart": "",
-  "endOfPublicationDate": ""
+  "endOfPublicationDate": "",
+  "domain": "https://data.vlaanderen.be/id/concept/Domein/Omgeving\r"
 }
