Add or update domain key in configuration

--- a/bodemenondergrond-AP-SensorenEnBemonstering-config.json
+++ b/bodemenondergrond-AP-SensorenEnBemonstering-config.json
@@ -109,5 +109,6 @@
   "repository": "OSLOthema-bodemEnOndergrond",
   "datePublicReviewStart": "2024-10-01",
   "datePublicReviewEnd": "2025-10-01",
-  "endOfPublicationDate": ""
+  "endOfPublicationDate": "",
+  "domain": "https://data.vlaanderen.be/id/concept/Domein/Omgeving\r"
 }
