--- a/bodemenondergrond-VOC-Bodem-config.json
+++ b/bodemenondergrond-VOC-Bodem-config.json
@@ -165,5 +165,5 @@
   "repository": "OSLOthema-bodemEnOndergrond",
   "datePublicReviewStart": "",
   "endOfPublicationDate": "",
-  "domain": "https://data.vlaanderen.be/id/concept/Domein/Omgeving\r"
+  "domain": "https://data.vlaanderen.be/id/concept/Domein/Omgeving"
 }
