Add or update domain key in configuration

--- a/bodemenondergrond-AP-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrond-config.json
@@ -102,5 +102,5 @@
   "datePublicReviewStart": "2024-10-01",
   "datePublicReviewEnd": "2025-10-01",
   "endOfPublicationDate": "",
-  "domain": "https://data.vlaanderen.be/id/concept/Domein/Omgeving\r"
+  "domain": "https://data.vlaanderen.be/id/concept/Domein/Omgeving"
 }
